--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.2</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
@@ -24,6 +25,7 @@
 			<plugin>
 				<groupId>org.jvnet.jaxb2.maven2</groupId>
 				<artifactId>maven-jaxb2-plugin</artifactId>
+				<version>0.12.3</version>
 				<configuration>
 					<schemaDirectory>${basedir}/src/main/resources/schema/</schemaDirectory>
 				</configuration>
