--- a/pom.xml
+++ b/pom.xml
@@ -2,19 +2,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<groupId>com.intele.chimera</groupId>
 	<artifactId>smsgw-client-java</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
+	
 	<name>SMS Gateway client</name>
 	<description>Client library for the Intelecom SMS Gateway application</description>
 	<url>https://www.intelecom.no/vare-losninger/mobile-tjenester/sms/sms-api/</url>
+	
 	<licenses>
 		<license>
 			<name>MIT License</name>
 			<url>http://www.opensource.org/licenses/mit-license.php</url>
 		</license>
 	</licenses>
+	
 	<developers>
 		<developer>
 			<name>Gunnar Grenlee</name>
@@ -35,6 +39,7 @@
 			<organizationUrl>https://www.intelecom.no/</organizationUrl>
 		</developer>
 	</developers>
+	
 	<scm>
 		<connection>scm:git:https://github.com/Intelecom/smsgw-client-java</connection>
 		<developerConnection>scm:git:https://github.com/Intelecom/smsgw-client-java</developerConnection>
@@ -74,9 +79,13 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<excludePackageNames>com.intele.chimera.gw</excludePackageNames>
+				</configuration>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
+						<phase>package</phase>
 						<goals>
 							<goal>jar</goal>
 						</goals>
@@ -89,6 +98,7 @@
 				<executions>
 					<execution>
 						<id>attach-sources</id>
+						<phase>package</phase>
 						<goals>
 							<goal>jar</goal>
 						</goals>
