--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	
 	<groupId>com.intele.chimera</groupId>
 	<artifactId>smsgw-client-java</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
 	<name>SMS Gateway client</name>
